plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.6.0'
	id 'net.ltgt.errorprone' version '5.1.0'
	id 'org.openrewrite.rewrite' version '7.34.0'
}

group = 'dev.eolmae'
version = '0.0.1-SNAPSHOT'
description = 'market-monitor'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// spring
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'org.springframework.retry:spring-retry:2.0.12'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// test
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// postgresql
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-database-postgresql'

	// caffeine
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'com.google.guava:guava:33.4.8-jre'

	// commons-lang3
	implementation 'org.apache.commons:commons-lang3'

	// ok http, krx data market login
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.12.0'

	// 코드 품질 (error prone, openrewrite)
	errorprone 'com.google.errorprone:error_prone_core:2.49.0'
	rewrite(platform('org.openrewrite.recipe:rewrite-recipe-bom:3.32.0'))
	rewrite('org.openrewrite.recipe:rewrite-migrate-java')
	rewrite('org.openrewrite.recipe:rewrite-static-analysis')
}

tasks.named('test') {
	useJUnitPlatform()
}

rewrite {
	activeRecipe('org.openrewrite.java.migrate.UpgradeToJava21')
	activeRecipe('org.openrewrite.staticanalysis.CommonStaticAnalysis')
	// rewrite.yml 로 custom style 정의, import 와일드카드 병합 차단
	activeStyle('dev.eolmae.NoWildcardImports')
}

spotless {
	java {
		target 'src/**/*.java'
		palantirJavaFormat()
	}
}

tasks.named('compileTestJava') {
	// 테스트 코드는 검사 대상에서 제외
	options.errorprone.enabled = false
}
